[tool.poetry]
name = "brew-tools"
version = "0.3.0"
description = "Commandline tools for the homebrewer"
authors = ["Sven <sven@unlogic.co.uk>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Svenito/brew-tools"
repository = "https://github.com/Svenito/brew-tools"
documentation = "https://brew-tools.readthedocs.io/en/latest"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta"
    ]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
black = "^22.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0"
flake8 = "^4.0"
mypy = "^0.941"
types-setuptools = "^57.4.11"
appdirs-stubs = "^0.1.0"

[tool.poetry.scripts]
brew_tools = "brew_tools.command_line:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
